Fix text overflow

--- a/src/styles/features/_post.scss
+++ b/src/styles/features/_post.scss
@@ -116,6 +116,9 @@
     h3 {
       display: block;
       height: 2.1rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       @include responsive(tiny) {
         font-size: 1.2rem;
